# langchain-NL-to-SQL-project

./: .gitignore  Langchain_NLtoSQL.ipynb  README.md  database.sql  generate_full_csvs.py  import_data_to_db.py  main.py  models.py  pyproject.toml  test.ipynb  tools.yaml
python3.11/: pyproject.toml
